--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -6,6 +6,7 @@
     --color-high-text: #ff5777;
     --color-tint: #ff8198;/*tint一般表示背景颜色*/
     --color-background:#fff;
+    --color-background-light:#e0e0e0e0;
     --font-size: 14px;
     --line-height: 1.5
 }
